deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-aspnetcore-deployment
spec:
  selector:
    matchLabels:
      app: hello-aspnetcore-pod
  template:
    metadata:
      labels:
        app: hello-aspnetcore-pod
    spec:
      containers:
      - name: hello-aspnetcore-container
        image: azureacr123.azurecr.io/hello-aspnetcore:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
