service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-aspnetcore-service
spec:
  selector:
    app: hello-aspnetcore-pod
  ports:
  - port: 8004
    targetPort: 80
  type: LoadBalancer
