ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  #annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    #nginx.ingress.kubernetes.io/server-snippet: |
      #gzip on;
      #gzip_min_length 100;
      #gzip_comp_level 3;
      #gzip_proxied any;
      #gzip_types text/plain text/css application/json application/javascript application/xml application/rss+xml text/javascript image/svg+xml;
      #gzip_disable "msie6";
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /weatherforecast
        pathType: Prefix
        backend:
          service:
            name: hello-aspnetcore-service
            port:
              number: 8004
      - path: /weatherforecast/echo-my-name
        pathType: Prefix
        backend:
          service:
            name: hello-aspnetcore-service
            port:
              number: 8004
